updated sidebar overflow issue

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -614,3 +614,7 @@ span.navigation:before {
     transition: all .3s;
     opacity:.8;
 }
+
+.white-space {
+    white-space: normal;
+}
